# realitycore

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
scripts/: fix_dll_import.py
src/: _realitycore.c
test/: test_realitycore.py
